# lopeningent_backend

./: .gitignore  Dockerfile  LICENSE  README.md  Server Handling - Documentation.docx  deploy.sh  docker-compose.yml  docker-entrypoint.sh  flow.txt  nginx.conf  polyline2json.py  python_deploy.sh  requirements.txt  rust_deploy.sh
data/: .gitignore  (+6 more)
server/: .gitignore  .server.log.swp  Cargo.toml  requirements.txt
server/157.193.231.196:8000/poi/types/: index.html
server/lib/buckets/: Cargo.toml
server/lib/buckets/src/: grid.rs  lib.rs
server/lib/database/: Cargo.toml
server/lib/database/src/: lib.rs
server/lib/database_derive/: Cargo.toml
server/lib/database_derive/src/: lib.rs
server/lib/graph/: Cargo.toml
server/lib/graph/src/: error.rs
server/lib/interface/: Cargo.toml
server/lib/interface/src/: directions.rs  geojson.rs  lib.rs  serialize.rs
server/lib/iron_frontend/: .gitignore  Cargo.toml
server/lib/iron_frontend/src/: main.rs
server/lib/logic/: Cargo.toml
server/lib/logic/src/: annotated.rs  consts.rs  data.rs  lib.rs  routing.rs
server/lib/newtypes/: Cargo.toml
server/lib/newtypes/src/: newtypes.rs
server/lib/transform/src/: coords.rs
server/lib/util/: Cargo.toml
server/lib/util/src/: lib.rs
server/routing_server/: Cargo.toml  check.txt  clippy.txt  config.txt
server/routing_server/buckets/src/: grid.rs  interval.rs  lib.rs
server/routing_server/database/: Cargo.toml
server/routing_server/database/src/: lib.rs
server/routing_server/database_derive/src/: lib.rs
server/routing_server/graph/: Cargo.toml
server/routing_server/graph/src/: dijkstra.rs  error.rs  graph.rs  heapdata.rs  iter.rs  lib.rs  ordering.rs  path.rs  testgraph.rs
server/routing_server/interface/: Cargo.toml
server/routing_server/interface/src/: directions.rs  geojson.rs  lib.rs  serialize.rs
server/routing_server/iron_frontend/: Cargo.toml
server/routing_server/iron_frontend/src/: lib.rs
server/routing_server/logic/: Cargo.toml
server/routing_server/logic/src/: annotated.rs  consts.rs  data.rs  lib.rs  limit.rs  routing.rs
server/routing_server/newtypes/: Cargo.toml
server/routing_server/newtypes/src/: lib.rs  newtypes.rs
server/routing_server/src/: main.rs
server/routing_server/tag_modifiers/: Cargo.toml
server/routing_server/tag_modifiers/src/: lib.rs  macros.rs
server/routing_server/transform/: Cargo.toml
server/server/: config.py  database.py  poi_coord_route.py  setdebug.py  settings.py  test.py  urls.py
server/server/deprecated_interface/: routes.py  tests.py  util.py
server/server/deprecated_static/: data.py
server/server/interface/: .routes.py.swp  __init__.py  closest.py  geojson.py  pois.py  readme.py  routes.py  stats.py  util.py
server/server/model/: edge.py  node.py  user.py
server/server/static/: data.py
(+350 files in other folders)
