[package]
name = "database"
version = "0.1.0"
authors = ["gedox <gerwin.dox@ugent.be>"]

[dependencies]
postgres = "*"
database_derive = {path = "../database_derive"}
newtypes = {path = "../newtypes"}
graph = {path = "../graph"}
serde = "*"
serde_derive = "*"
tag_modifiers = {path = "../tag_modifiers"}
log = "*"
