[package]
name = "interface"
version = "0.1.0"
authors = ["gedox <gerwin.dox@ugent.be>", "timaert <tim.baccaert@student.howest.be>"]

[dependencies]
graph = {path = "../graph"}
database = {path = "../database"}
newtypes = {path = "../newtypes"}
logic = {path = "../logic"}
nalgebra = "*"
base64 = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
log = "*"
